fixed recomended video time not showing

--- a/Assignment-2/youtube-files/styles/video.css
+++ b/Assignment-2/youtube-files/styles/video.css
@@ -48,7 +48,9 @@
     font-weight: 500;
     border-radius: 5px;
     padding: 4px;
-    right: 10px;
+    right: 8px;
+    bottom: 28px;
+    z-index: 1;
 }
 
 /* Video Title CSS Code */
